--- a/index.html
+++ b/index.html
@@ -15,5 +15,24 @@
 
     <p><a href="https://forms.gle/uWnvk8PtdAFfZy5R9" target="_blank">Haz clic aquí para realizar la Evaluación</a></p>
 
+    <h3>Descripcion:</h3>
+    <p>Este cuento interactivo de Caperucita Roja, narra la clásica historia de la niña con capa roja que visita a su abuela enferma, enfrentándose al lobo astuto en el bosque. Con personajes y diálogos animados, el proyecto invita a los niños a disfrutar y aprender mientras se sumergen en una narrativa sencilla y educativa.</p>
+    <h3>Notas y Creditos</h3>
+    <p>Autor: Yoan Alvarez
+
+Dobles de Vos
+Narrador - Santiago Alvarez
+Caperucita Roja - Samantha Alvarez
+Mamá de Caperucita - Glorimar Rivas
+Abuela de Caperucita - Glorimar Rivas
+Lobo - Yoan Alvarez
+Cazador - Yoan Alvarez
+
+Sonidos: Créditos a quien corresponda
+
+Personajes y Escenarios:
+Manus.ia, ChatGPT, Gemini.ia, Prepexity.ia</p>
+
 </body>
 </html>
+
