Actualización del cuento con descripción y créditos corregidos
Actualización del cuento con descripción y créditos corregidos

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,24 +15,31 @@
 
     <p><a href="https://forms.gle/uWnvk8PtdAFfZy5R9" target="_blank">Haz clic aquí para realizar la Evaluación</a></p>
 
-    <h3>Descripcion:</h3>
-    <p>Este cuento interactivo de Caperucita Roja, narra la clásica historia de la niña con capa roja que visita a su abuela enferma, enfrentándose al lobo astuto en el bosque. Con personajes y diálogos animados, el proyecto invita a los niños a disfrutar y aprender mientras se sumergen en una narrativa sencilla y educativa.</p>
-    <h3>Notas y Creditos</h3>
-    <p>Autor: Yoan Alvarez
+    <h3>Descripción:</h3>
+    <p>
+        Este cuento interactivo de Caperucita Roja narra la clásica historia de la niña con capa roja que visita a su abuela enferma, enfrentándose al lobo astuto en el bosque. Con personajes y diálogos animados, el proyecto invita a los niños a disfrutar y aprender mientras se sumergen en una narrativa sencilla y educativa.
+    </p>
 
-Dobles de Vos
-Narrador - Santiago Alvarez
-Caperucita Roja - Samantha Alvarez
-Mamá de Caperucita - Glorimar Rivas
-Abuela de Caperucita - Glorimar Rivas
-Lobo - Yoan Alvarez
-Cazador - Yoan Alvarez
+    <h3>Notas y Créditos:</h3>
+    <p>
+        Autor: Yoan Alvarez<br><br>
 
-Sonidos: Créditos a quien corresponda
+        Dobles de Voz:<br>
+        Narrador - Santiago Alvarez<br>
+        Caperucita Roja - Samantha Alvarez<br>
+        Mamá de Caperucita - Glorimar Rivas<br>
+        Abuela de Caperucita - Glorimar Rivas<br>
+        Lobo - Yoan Alvarez<br>
+        Cazador - Yoan Alvarez<br><br>
 
-Personajes y Escenarios:
-Manus.ia, ChatGPT, Gemini.ia, Prepexity.ia</p>
+        Sonidos: Créditos a quien corresponda<br><br>
+
+        Personajes y Escenarios:<br>
+        Manus.ia, ChatGPT, Gemini.ia, Prepexity.ia
+    </p>
 
 </body>
 </html>
+
+
 
